[package]
name = "rogue"
version = "0.1.0"
authors = ["Ivan Bodrov <ibodrov@gmail.com>"]

[profile.release]
debug = true

[dependencies]
sfml = "*"
gfx = "*"
gfx_window_glutin = "*"
gfx_device_gl = "*"
glutin = "*"
cgmath = "*"
time = "*"
rand = "*"

[dependencies.world]
path = "world"
version = "0.1.0"
