[package]
name = "rogue"
version = "0.1.0"
authors = ["Ivan Bodrov <ibodrov@gmail.com>"]

[dependencies]
env_logger = "*"

[dependencies.cfg]
path = "cfg"
version = "0.1.0"

[dependencies.tex_atlas]
path = "tex_atlas"
version = "0.1.0"

[dependencies.world]
path = "world"
version = "0.1.0"

[dependencies.ui]
path = "ui"
version = "0.1.0"

[dev-dependencies]
specs = "*"

[profile.release]
debug = true
