[package]
name = "ui"
version = "0.1.0"
authors = ["Ivan Bodrov <ibodrov@gmail.com>"]

[dependencies]
glium = "*"
cgmath = "*"
time = "*"
rand = "*"
toml = "*"
log = "*"

[dependencies.world]
path = "../world"
version = "0.1.0"

[dependencies.tex_atlas]
path = "../tex_atlas"
version = "0.1.0"

[dependencies.cfg]
path = "../cfg"
version = "0.1.0"
